# NAS-Streamliner

./: .gitignore  README.md  classifier.py  encoder.py  process_media.py  pyproject.toml  watcher.py
config/: cam_map.yaml  settings.synology.example.yaml  settings.yaml
docs/: architecture.md
src/nas_streamliner/: camera_map.py  config.py  ffprobe.py  filesystem.py  logging_setup.py  manifest.py  media_kind.py  models.py  naming.py  preflight.py  state_store.py
src/nas_streamliner/services/: __init__.py  classifier.py  encoder.py  watcher.py
tests/: __init__.py  test_camera_map.py  test_config.py  test_encoder.py  test_media_kind.py  test_naming.py
